# Adventure

./: DONOTREADME.md  README  README.md  comp  main.cpp  self.md  weapon_data.json
Adventure Game/: CMakeLists.txt  beings.cpp  beings.h  inventory.cpp  inventory.h  lore.cpp  lore.h  main.cpp  monster.cpp  monster.h  objects.cpp  objects.h  qol.cpp  qol.h  universal.cpp  universal.h  weapons.cpp  weapons.h
Calculator/: CMakeLists.txt  calculator.cpp
Tic Tac Toe Game/: CMakeLists.txt  tic-tac-toe game.cpp
